--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,6 +14,7 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
+    transition: 1s;
 }
 
 header h1 {
@@ -22,6 +23,7 @@ header h1 {
     line-height: 36px;
     letter-spacing: 0.166667px;
     max-width: 21ch;
+    transition: 1s;
 }
 
 header h2 {
@@ -31,6 +33,7 @@ header h2 {
     letter-spacing: 0.166667px;
     max-width: 19ch;
     margin-top: 1px;
+    transition: 1s;
 }
 
 header p {
@@ -41,6 +44,7 @@ header p {
     max-width: 32ch;
     text-align: center;
     margin-top: 13px;
+    transition: 1s;
 }
 
 
@@ -54,6 +58,7 @@ main {
     align-items: center;
     flex-wrap: wrap;
     max-width: 350px;
+    transition: 1s;
 }
 
 .box {
@@ -63,6 +68,7 @@ main {
     border-radius: 8px;
     padding: 27px 0 0 28px;
     position: relative;
+    transition: 1s;
 }
 
 .box::before {
@@ -97,6 +103,7 @@ main {
     font-weight: 600;
     font-size: 20px;
     line-height: 30px;
+    transition: 1s;
 }
 
 .box p {
@@ -105,18 +112,21 @@ main {
     line-height: 23px;
     letter-spacing: 0.0902778px;
     margin-top: 1px;
+    transition: 1s;
 }
 
 .box svg{
     position: absolute;
     bottom: 28px;
     right: 28px;
+    transition: 1s;
 }
 
 .box_group {
     display: flex;
     flex-direction: column;
     gap: 24px;
+    transition: 1s;
 }
 
 
@@ -129,6 +139,7 @@ main {
         font-size: 36px;
         line-height: 54px;
         letter-spacing: 0.25px;
+        transition: 1s;
     }
 
     header h2 {
@@ -136,20 +147,24 @@ main {
         font-size: 36px;
         line-height: 54px;
         letter-spacing: 0.25px;
+        transition: 1s;
     }
 
     header p {
         max-width: 54ch;
+        transition: 1s;
     }
 
     main {
         max-width: 100%;
         margin-top: 64px;
         gap: 30px;
+        transition: 1s;
     }
 
     .box_group {
         gap: 30px;
+        transition: 1s;
     }
 }
 
